--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -325,7 +325,6 @@
         text-align: center;
         font-size: 22px;
         font-weight: bold;
-        margin: 0 34px;
 
         span {
             display: block;
@@ -341,6 +340,7 @@
         .displayFlex;
         .align-items(center);
         flex-direction: column;
+        margin: 0 34px;
 
         .image-progress {
             position: relative;
@@ -606,23 +606,13 @@
 }
 
 .feed-wrapper .community {
-    .top {
-        height: 76px;
-
-        .title {
-            margin-bottom: 6px;
+    .gamification-header {
+        .gamification-data {
+            font-size: 18px;
         }
-    }
 
-    .filter-wrapper {
-        text-align: right;
-        padding: 10px 0 0 0;
-
-        .action-btn {
-            line-height: 14px;
-            font-size: 14px;
-            padding: 4px 10px;
-            min-width: 0;
+        .middle {
+            margin: 0 10px;
         }
     }
 
