--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -666,7 +666,7 @@ md-menu-item > a.md-button {
 
         .achievements {
             padding-left: 6px;
-            color: @buttonColorBlue;
+            color: @gamificationMediumGreen;
 
             .separator {
                 background: @borderColorBottomGrey;
