--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -344,12 +344,12 @@ md-menu-item {
         }
 
         .achievements {
-            color: @buttonColorBlue;
+            color: @gamificationMediumGreen;
             padding-left: 0;
             margin-top: 4px;
 
             .separator {
-                background: @buttonColorBlue;
+                background: @borderColorBottomGrey;
             }
         }
     }
@@ -859,7 +859,7 @@ md-menu-item {
     padding: 0;
 
     .md-toast-content {
-        background: @gamificationYellow;
+        background: @gamificationMediumGreen;
 
         @media (min-width: 1920px) {
             max-width: 100%;
@@ -868,7 +868,7 @@ md-menu-item {
 
     .wrapper {
         width: 100%;
-        max-width: 860px;
+        //max-width: 860px;
         padding: 0 80px 0 10px;
         margin: 0 auto;
         height: @heightOfHeader;
@@ -892,7 +892,8 @@ md-menu-item {
             .justifyContet(flex-start);
             font-size: 18px;
             font-weight: bold;
-            color: #777471;
+            color: #ffffff;
+            margin: 0 auto;
 
             .text {
                 margin-bottom: -2px;
