--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
@@ -618,6 +618,9 @@
 .community .custom-progress-bar .md-container .md-bar {
   background: #73b435;
 }
+.feed-wrapper .community .community-wrapper {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+}
 .feed-wrapper .community .gamification-header .gamification-data {
   font-size: 18px;
 }
