--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -606,6 +606,9 @@
 }
 
 .feed-wrapper .community {
+    .community-wrapper{
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+    }
     .gamification-header {
         .gamification-data {
             font-size: 18px;
