--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
@@ -73,18 +73,19 @@
             </div>
             <div class="second-line" ng-if="i.selectedState === 0">
                 <div class="item-meta">
-                    <a class="ellipsis" ui-sref="user({userId:i.details.ownerId,userName:i.details.owner})" ng-bind="::i.details.owner"></a>
-                    <span>&nbsp;-&nbsp;</span>
-                    <span class="date">{{::i.details.date | date : 'mediumDate'}}</span>
-                </div>
-                <div class="achievements">
-                    <span ng-bind="::i.details.ownerScore | megaNumber"></span>
-                    <span class="separator"></span>
-                    <ng-pluralize count="i.details.ownerBadges" when="{
+                    <div class="user-meta">
+                        <a class="ellipsis" ui-sref="user({userId:i.details.ownerId,userName:i.details.owner})" ng-bind="::i.details.owner"></a>
+                        <div class="achievements">
+                            <span ng-bind="::i.details.ownerScore | megaNumber"></span>
+                            <span class="separator"></span>
+                            <ng-pluralize count="i.details.ownerBadges" when="{
                                                                                      'one': '{} @GamificationResources.Badge',
                                                                                      'two': '{} @GamificationResources.Badges',
                                                                                      'other' : '{} @GamificationResources.Badges'
                                                                                      }"></ng-pluralize>
+                        </div>
+                    </div>
+                    <span class="date">{{::i.details.date | date : 'mediumDate'}}</span>
                 </div>
             </div>
         </div>
