--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.css
@@ -719,7 +719,7 @@ md-toast .md-toast-content span {
   max-width: 130px;
   padding-left: 10px;
   position: relative;
-  color: rgba(255, 255, 255, 0.6);
+  color: #438604;
   font-size: 12px;
 }
 .achievements .separator {
@@ -728,7 +728,7 @@ md-toast .md-toast-content span {
   display: inline-block;
   margin: 2px 5px;
   border-radius: 100%;
-  background: rgba(255, 255, 255, 0.6);
+  background: #585f66;
 }
 .indent-content {
   margin-left: 8px;
