--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -1005,7 +1005,8 @@ md-toast .md-toast-content span {
     max-width: 130px;
     padding-left: 10px;
     position: relative;
-    color: rgba(255, 255, 255, 0.6);
+    color: @gamificationGreen;
+    //color: rgba(255, 255, 255, 0.6);
     font-size: 12px;
 
 
@@ -1015,7 +1016,8 @@ md-toast .md-toast-content span {
         display: inline-block;
         margin: 2px 5px;
         border-radius: 100%;
-        background: rgba(255, 255, 255, 0.6);
+        background: @svgInvite;
+        //background: rgba(255, 255, 255, 0.6);
     }
 }
 
