--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
@@ -311,6 +311,16 @@
             width: 40px;
             height: 40px;
         }
+
+
+
+        .achievements {
+            color: rgba(255, 255, 255, 0.6);
+
+            .separator {
+                background: rgba(255, 255, 255, 0.6);
+            }
+        }
     }
 
     &.expand-search {
