--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
@@ -280,6 +280,19 @@ md-menu-item.blue svg {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
+  -webkit-align-items: baseline;
+  align-items: baseline;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.itemPage .second-line .item-meta .user-meta {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  margin-right: 10px;
+  flex-shrink: 1;
+  flex-grow: 0;
+  overflow: hidden;
 }
 .itemPage .second-line .item-meta a,
 .itemPage .second-line .item-meta span {
@@ -288,17 +301,13 @@ md-menu-item.blue svg {
 }
 .itemPage .second-line .item-meta .date {
   padding-right: 5px;
-}
-.itemPage .second-line .item-meta span {
-  color: #212325;
+  font-size: 12px;
 }
 .itemPage .second-line .achievements {
-  color: #4190b9;
   padding-left: 0;
-  margin-top: 4px;
-}
-.itemPage .second-line .achievements .separator {
-  background: #4190b9;
+  margin-left: 10px;
+  text-overflow: initial;
+  flex-shrink: 0;
 }
 .itemPage .iframeContent {
   border: 0;
@@ -702,7 +711,12 @@ md-menu-item.blue svg {
   padding: 0;
 }
 .like-toaster-template .md-toast-content {
-  background: #ffce2f;
+  background: #73b435;
+}
+@media (max-width: 600px) {
+  .like-toaster-template .md-toast-content {
+    padding: 0;
+  }
 }
 @media (min-width: 1920px) {
   .like-toaster-template .md-toast-content {
@@ -711,26 +725,10 @@ md-menu-item.blue svg {
 }
 .like-toaster-template .wrapper {
   width: 100%;
-  max-width: 860px;
-  padding: 0 80px 0 10px;
   margin: 0 auto;
   height: 65px;
-}
-@media (max-width: 960px) {
-  .like-toaster-template .wrapper {
-    padding: 0 44px 0 48px;
-  }
-}
-@media (max-width: 900px) {
-  .like-toaster-template .wrapper {
-    padding: 0 0 0 62px;
-    max-width: 800px;
-  }
-}
-@media (max-width: 600px) {
-  .like-toaster-template .wrapper {
-    padding-left: 10px;
-  }
+  padding: 0 40px;
+  position: relative;
 }
 .like-toaster-template .wrapper .like-area {
   display: -webkit-flex;
@@ -738,11 +736,12 @@ md-menu-item.blue svg {
   display: flex;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+  -webkit-justify-content: center;
+  justify-content: center;
   font-size: 18px;
   font-weight: bold;
-  color: #777471;
+  color: #ffffff;
+  width: 100%;
 }
 .like-toaster-template .wrapper .like-area .text {
   margin-bottom: -2px;
@@ -803,6 +802,10 @@ md-menu-item.blue svg {
 .like-toaster-template .wrapper .like-area button.blue > div md-icon {
   fill: #ffffff;
 }
-.like-toaster-template .wrapper md-icon {
-  fill: #888b8e;
+.like-toaster-template .wrapper .close {
+  position: absolute;
+  right: 0;
+}
+.like-toaster-template .wrapper .close md-icon {
+  fill: #ffffff;
 }
