--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -328,6 +328,16 @@ md-menu-item {
             white-space: initial;
             text-align: left;
             .displayFlex;
+            .align-items(baseline);
+            .justifyContet(space-between);
+
+            .user-meta {
+                .displayFlex;
+                margin-right: 10px;
+                flex-shrink: 1;
+                flex-grow: 0;
+                overflow: hidden;
+            }
 
             a, span {
                 display: inline-block;
@@ -336,21 +346,15 @@ md-menu-item {
 
             .date {
                 padding-right: 5px;
-            }
-
-            span {
-                color: @backgroundColorBlack;
+                font-size: 12px;
             }
         }
 
         .achievements {
-            color: @buttonColorBlue;
             padding-left: 0;
-            margin-top: 4px;
-
-            .separator {
-                background: @buttonColorBlue;
-            }
+            margin-left: 10px;
+            text-overflow: initial;
+            flex-shrink: 0;
         }
     }
 
@@ -859,7 +863,11 @@ md-menu-item {
     padding: 0;
 
     .md-toast-content {
-        background: @gamificationYellow;
+        background: @gamificationMediumGreen;
+
+        @media (max-width: 600px) {
+            padding: 0;
+        }
 
         @media (min-width: 1920px) {
             max-width: 100%;
@@ -868,31 +876,20 @@ md-menu-item {
 
     .wrapper {
         width: 100%;
-        max-width: 860px;
-        padding: 0 80px 0 10px;
         margin: 0 auto;
         height: @heightOfHeader;
+        padding: 0 40px;
+        position: relative;
 
-        @media(max-width: 960px) {
-            padding: 0 44px 0 48px;
-        }
-
-        @media(max-width: 900px) {
-            padding: 0 0 0 62px;
-            max-width: 800px;
-        }
-
-        @media(max-width: 600px) {
-            padding-left: 10px;
-        }
 
         .like-area {
             .displayFlex;
             .align-items(center);
-            .justifyContet(flex-start);
+            .justifyContet(center);
             font-size: 18px;
             font-weight: bold;
-            color: #777471;
+            color: @textColorWhite;
+            width: 100%;
 
             .text {
                 margin-bottom: -2px;
@@ -957,8 +954,13 @@ md-menu-item {
             }
         }
 
-        md-icon {
-            fill: @textColorGrey;
+        .close {
+            position: absolute;
+            right: 0;
+
+            md-icon {
+                fill: @textColorWhite;
+            }
         }
     }
 }
