--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -3,6 +3,7 @@
 .userPage {
     .displayFlex;
     .justifyContet(flex-start);
+
     .profile-sidebar, .profile-content {
         @media(max-width: 960px) {
             margin-right: 0;
@@ -125,10 +126,10 @@
             th {
                 vertical-align: top;
                 text-align: left;
-                padding: 0 20px 0 10px;
+                padding: 0 6px;
                 font-size: 14px;
                 color: @gamificationDarkGreen;
-                //max-width: 50px;
+                min-width: 120px;
                 width: 1%;
                 line-height: 36px;
             }
