--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -882,6 +882,9 @@ md-menu-item {
         padding: 0 40px;
         position: relative;
 
+        @media(max-width: 600px) {
+            padding-left: 10px;
+        }
 
         .like-area {
             .displayFlex;
