--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -45,13 +45,14 @@
 
     .message {
         font-size: 16px;
-        background: @svgQuizRanking;
+        position: absolute;
+        right: 16px;
+        bottom: 16px;
+        border: 1px solid @textColorWhite;
         color: @textColorWhite;
         padding: 3px 13px;
         border-radius: 8px;
-        margin: 20px 0 9px 0;
         .displayFlex;
-        margin: 20px auto 9px auto;
 
         .content {
             .displayInlineFlex;
