--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/LeaderboardPartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/LeaderboardPartial.cshtml
@@ -5,7 +5,9 @@
             <md-icon md-svg-icon="t:close"></md-icon>
         </md-button>
     </md-toolbar>
-    @Helpers.UserGamification("g.leaderboardUser")
+    <div class="gamification-header">
+        @Helpers.UserGamification("g.leaderboardUser")
+    </div>
     @* ReSharper disable once Mvc.PartialViewNotResolved *@
     @{ Html.RenderPartial("_LeaderBoard");}
 </md-dialog>
