--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -2,7 +2,15 @@
 @model Zbang.Cloudents.Mvc4WebRole.Models.Gamification
 
 <div class="badges-wrapper">
-    @Helpers.UserGamification("u.leaderboardUser")
+    <div class="gamification-header">
+        @Helpers.UserGamification("u.leaderboardUser")
+        <button class="message" ng-if="::!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
+            <div class="content">
+                <md-icon md-svg-icon="t:chat"></md-icon>
+                <span>@UserResources.MessageButton</span>
+            </div>
+        </button>
+    </div>
     <div class="badges-bar">
         <md-tabs class="badges-tabs" md-dynamic-height="true" md-stretch-tabs="always">
             <md-tab ui-sref="user.badge({type:'level'})" md-active="g.isActive('level')">
@@ -26,7 +34,7 @@
                         @{ string progress = "g.levels.l" + level.Index + ".progress"; }
                         <div class="title">
                             <div class="image">
-                                <img ng-class="{inprogress: @progress!==100}" src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name"/>
+                                <img ng-class="{inprogress: @progress!==100}" src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name" />
                             </div>
                             <div class="name">@level.Name</div>
                         </div>
@@ -38,7 +46,7 @@
                             </div>
                         </div>
                     </li>
-                }
+                            }
 
             </ul>
         </div>
@@ -59,50 +67,50 @@
                             <div class="progress">
                                 <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
                                 <div class="text">{{@progress}}% complete</div>
-                                </div>
+                            </div>
                         </div>
                     </li>
-                }
+                            }
             </ul>
         </div>
         @*<div ng-switch-when="badge" class="tab badges">
-            <div class="badges-container" ng-if="!g.badgeInfo">
-                <div class="wrapper" ng-repeat="badge in ::g.badges">
-                    <div class="badge-container" ng-click="g.showBadge(badge)">
-                        <md-icon md-svg-icon="p:checkmark" ng-if="badge.progress === 100"></md-icon>
-                        <img class="image" ng-if="badge.progress === 100" ng-src="{{::badge.image}}" alt="{{badge.name}}" />
-                        <img class="image" ng-if="badge.progress !== 100" ng-src="{{::badge.imageHidden}}" alt="{{badge.name}}" />
-                        <div class="text" ng-bind="::badge.name"></div>
-                        <div class="progress">
-                            <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{::badge.progress}}"></md-progress-linear>
+                <div class="badges-container" ng-if="!g.badgeInfo">
+                    <div class="wrapper" ng-repeat="badge in ::g.badges">
+                        <div class="badge-container" ng-click="g.showBadge(badge)">
+                            <md-icon md-svg-icon="p:checkmark" ng-if="badge.progress === 100"></md-icon>
+                            <img class="image" ng-if="badge.progress === 100" ng-src="{{::badge.image}}" alt="{{badge.name}}" />
+                            <img class="image" ng-if="badge.progress !== 100" ng-src="{{::badge.imageHidden}}" alt="{{badge.name}}" />
+                            <div class="text" ng-bind="::badge.name"></div>
+                            <div class="progress">
+                                <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{::badge.progress}}"></md-progress-linear>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div ng-if="g.badgeInfo" class="expanded">
-                <div class="prev">
-                    <md-icon ng-class="{disabled: !g.badgeInfo.prev}" ng-click="g.showBadge(g.badgeInfo.prev)" md-svg-icon="p:arrow-right"></md-icon>
-                </div>
-                <div class="badge-container">
+                <div ng-if="g.badgeInfo" class="expanded">
+                    <div class="prev">
+                        <md-icon ng-class="{disabled: !g.badgeInfo.prev}" ng-click="g.showBadge(g.badgeInfo.prev)" md-svg-icon="p:arrow-right"></md-icon>
+                    </div>
+                    <div class="badge-container">
 
-                    <md-icon md-svg-icon="p:checkmark" ng-if="g.badgeInfo.data.progress === 100"></md-icon>
-                    <img class="image" ng-if="g.badgeInfo.data.progress === 100" ng-src="{{g.badgeInfo.data.image}}" alt="{{g.badgeInfo.data.name}}" />
-                    <img class="image" ng-if="g.badgeInfo.data.progress !== 100" ng-src="{{g.badgeInfo.data.imageHidden}}" alt="{{g.badgeInfo.data.name}}" />
-                    <div class="text" ng-bind="g.badgeInfo.data.name"></div>
-                    <div class="progress">
-                        <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{g.badgeInfo.data.progress}}"></md-progress-linear>
+                        <md-icon md-svg-icon="p:checkmark" ng-if="g.badgeInfo.data.progress === 100"></md-icon>
+                        <img class="image" ng-if="g.badgeInfo.data.progress === 100" ng-src="{{g.badgeInfo.data.image}}" alt="{{g.badgeInfo.data.name}}" />
+                        <img class="image" ng-if="g.badgeInfo.data.progress !== 100" ng-src="{{g.badgeInfo.data.imageHidden}}" alt="{{g.badgeInfo.data.name}}" />
+                        <div class="text" ng-bind="g.badgeInfo.data.name"></div>
+                        <div class="progress">
+                            <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{g.badgeInfo.data.progress}}"></md-progress-linear>
+                        </div>
+                        <div class="details">
+                            <div class="condition" ng-bind="g.badgeInfo.data.details"></div>
+                            <div class="points">+{{g.badgeInfo.data.points}} pts</div>
+                        </div>
                     </div>
-                    <div class="details">
-                        <div class="condition" ng-bind="g.badgeInfo.data.details"></div>
-                        <div class="points">+{{g.badgeInfo.data.points}} pts</div>
+                    <div class="next">
+                        <md-icon ng-class="{disabled: !g.badgeInfo.next}" ng-click="g.showBadge(g.badgeInfo.next)" md-svg-icon="p:arrow-right"></md-icon>
                     </div>
+                    <md-icon class="close" md-svg-icon="t:close" ng-click="g.badgeInfo=false"></md-icon>
                 </div>
-                <div class="next">
-                    <md-icon ng-class="{disabled: !g.badgeInfo.next}" ng-click="g.showBadge(g.badgeInfo.next)" md-svg-icon="p:arrow-right"></md-icon>
-                </div>
-                <md-icon class="close" md-svg-icon="t:close" ng-click="g.badgeInfo=false"></md-icon>
-            </div>
-        </div>*@
+            </div>*@
         <div ng-switch-when="community" class="tab community" srph-infinite-scroll="g.loadMoreLeaderboard()">
             @{
                 // ReSharper disable once Mvc.PartialViewNotResolved
