Fixed resources issues

--- a/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
@@ -32,7 +32,7 @@
             <span class="level" ng-bind="::@(alias).levelName"></span>
         </div>
         <div class="gamification-data">
-            <span class="title">@GamificationResources.Points</span>
+            <span class="title">@UserResources.Points</span>
             <span class="value" ng-bind="::@(alias).points"></span>
         </div>
 }
