--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -16,7 +16,7 @@
                     <span class="seperator">-</span>
                     <span class="level" ng-bind="gb.data.levelName"></span>
                 </div>
-                <div class="points">{{::gb.data.points}} @GamificationResources.Points</div>
+                <div class="points">{{::gb.data.points}} @UserResources.Points</div>
             </div>
             <div class="bottom">
                 <div class="level gamification-data">
