--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -42,7 +42,7 @@
                             @level.Description
                             <div class="progress">
                                 <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
-                                <div class="text">{{@progress}}% complete</div>
+                                <div class="text">{{@progress}}% @GamificationResources.Complete</div>
                             </div>
                         </div>
                     </li>
@@ -66,7 +66,7 @@
                             @level.Description
                             <div class="progress">
                                 <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
-                                <div class="text">{{@progress}}% complete</div>
+                                <div class="text">{{@progress}}% @GamificationResources.Complete</div>
                             </div>
                         </div>
                     </li>
