Fixed few minor bugs

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
@@ -632,7 +632,7 @@
   margin-top: 0;
 }
 .feed-wrapper .community .content .users .user-data {
-  padding: 4px 10px;
+  padding: 10px;
 }
 .feed-wrapper .community .content .users .user-data .img-wrapper {
   width: 36px;
