--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -625,7 +625,7 @@
 
         .users {
             .user-data {
-                padding: 4px 10px;
+                padding: 10px;
 
                 .img-wrapper {
                     width: 36px;
