--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -5,7 +5,7 @@
     <div class="bg-round"></div>
     <div class="bg-l"></div>
     <div class="bg-r"></div>
-    <a class="content" ga-track-event="['dashboard', 'to user page']" ui-sref="user({userId:gb.data.userId, userName:gb.data.userName})">
+    <a class="content" ga-track-event="['dashboard', 'to user page']" ui-sref="user({userId:gb.data.id, userName:gb.data.name})">
         <div class="image-side">
             <user-image class="img-circle" name="::gb.data.name" image="::gb.data.image" width="70" height="70" noremove="true"></user-image>
         </div>
